examples/edgio-nextjs-commerce-example/packages/spree/dist/errors/MissingSlugVariableError.js
class MissingSlugVariableError extends Error {
}
export { MissingSlugVariableError as default };
